; ModuleID = '/home/carl/AnghaBench/systemd/src/shared/extr_cgroup-setup.c_cg_cpu_shares_parse.c'
source_filename = "/home/carl/AnghaBench/systemd/src/shared/extr_cgroup-setup.c_cg_cpu_shares_parse.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@CGROUP_CPU_SHARES_INVALID = common dso_local global i64 0, align 8
@CGROUP_CPU_SHARES_MIN = common dso_local global i64 0, align 8
@CGROUP_CPU_SHARES_MAX = common dso_local global i64 0, align 8
@ERANGE = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @cg_cpu_shares_parse(i8* %0, i64* %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i8*, align 8
  %5 = alloca i64*, align 8
  %6 = alloca i64, align 8
  %7 = alloca i32, align 4
  store i8* %0, i8** %4, align 8
  store i64* %1, i64** %5, align 8
  %8 = load i8*, i8** %4, align 8
  %9 = call i64 @isempty(i8* %8)
  %10 = icmp ne i64 %9, 0
  br i1 %10, label %11, label %14

11:                                               ; preds = %2
  %12 = load i64, i64* @CGROUP_CPU_SHARES_INVALID, align 8
  %13 = load i64*, i64** %5, align 8
  store i64 %12, i64* %13, align 8
  store i32 0, i32* %3, align 4
  br label %35

14:                                               ; preds = %2
  %15 = load i8*, i8** %4, align 8
  %16 = call i32 @safe_atou64(i8* %15, i64* %6)
  store i32 %16, i32* %7, align 4
  %17 = load i32, i32* %7, align 4
  %18 = icmp slt i32 %17, 0
  br i1 %18, label %19, label %21

19:                                               ; preds = %14
  %20 = load i32, i32* %7, align 4
  store i32 %20, i32* %3, align 4
  br label %35

21:                                               ; preds = %14
  %22 = load i64, i64* %6, align 8
  %23 = load i64, i64* @CGROUP_CPU_SHARES_MIN, align 8
  %24 = icmp slt i64 %22, %23
  br i1 %24, label %29, label %25

25:                                               ; preds = %21
  %26 = load i64, i64* %6, align 8
  %27 = load i64, i64* @CGROUP_CPU_SHARES_MAX, align 8
  %28 = icmp sgt i64 %26, %27
  br i1 %28, label %29, label %32

29:                                               ; preds = %25, %21
  %30 = load i32, i32* @ERANGE, align 4
  %31 = sub nsw i32 0, %30
  store i32 %31, i32* %3, align 4
  br label %35

32:                                               ; preds = %25
  %33 = load i64, i64* %6, align 8
  %34 = load i64*, i64** %5, align 8
  store i64 %33, i64* %34, align 8
  store i32 0, i32* %3, align 4
  br label %35

35:                                               ; preds = %32, %29, %19, %11
  %36 = load i32, i32* %3, align 4
  ret i32 %36
}

declare dso_local i64 @isempty(i8*) #1

declare dso_local i32 @safe_atou64(i8*, i64*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
